--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.5"
     kapt  "androidx.room:room-compiler:2.2.5"
     implementation 'com.wajahatkarim3:roomexplorer:0.0.2'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
 }
