--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@
 .externalNativeBuild
 .cxx
 local.properties
-/app/src/main/res/values/google_maps_api.xml
+app/src/main/res/values/google_maps_api.xml
+app/google-services.json
